src/objects/SMS_Message__c.object
<CustomObject>
    <fields>
        <fullName>SM_CampaignAssociation__c</fullName>
        <description>This field stores information about the result of the trigger which associates the SMS Message to a campaign</description>
        <label>Campaign Association Result</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Association has not been performed yet, please, contact the Administrator.</fullName>
                </value>
                <value>
                    <fullName>There are not Outbound campaigns for association, please, contact the Administrator.</fullName>
                </value>
                <value>
                    <fullName>Campaign has been associated by campaign code.</fullName>
                </value>
                <value>
                    <fullName>Association has been performed manually.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SM_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Sent SMSs</relationshipLabel>
        <relationshipName>SMS_Messages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SM_LastSMSSent__c</fullName>
        <label>Last Sent Date</label>
        <summarizedField>SMS_Tracking__c.Date__c</summarizedField>
        <summaryForeignKey>SMS_Tracking__c.SS_SMS_Message__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SM_MessageName__c</fullName>
        <externalId>true</externalId>
        <label>Message Name</label>
        <length>156</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SM_Message_Type__c</fullName>
        <label>Message Type</label>
        <length>156</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SM_NumberOfSent__c</fullName>
        <label>Number of Sent</label>
        <summaryForeignKey>SMS_Tracking__c.SS_SMS_Message__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SM_SMSUsed__c</fullName>
        <label>SMS Used</label>
        <summarizedField>SMS_Tracking__c.SS_NumberOfSMSUsed__c</summarizedField>
        <summaryForeignKey>SMS_Tracking__c.SS_SMS_Message__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SM_SuperMessagesUsed__c</fullName>
        <formula>SM_SMSUsed__c *45</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Super Messages Used</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Envío SMS</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Envío SMS Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Envíos SMS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>